[gd_scene load_steps=5 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Backgrounds/MainTitle.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Backgrounds/title.png" type="Texture" id=3]

[sub_resource type="Theme" id=1]

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 0.9375 )
texture = ExtResource( 2 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 327.0
margin_top = 193.0
margin_right = 473.0
margin_bottom = 407.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 146.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 32.0
margin_top = 74.0
margin_right = 114.0
margin_bottom = 214.0
size_flags_horizontal = 4
custom_constants/separation = 20

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 82.0
margin_bottom = 20.0
text = "Tutorial"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 82.0
margin_bottom = 60.0
theme = SubResource( 1 )
text = "Continue"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 82.0
margin_bottom = 100.0
text = "New Game"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 82.0
margin_bottom = 140.0
text = "Exit"
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
